// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`calls out live ballot sheets in test mode 1`] = `
<div>
  <div
    class="sc-fjdhpX gOpleb"
  >
    <div
      class="sc-htoDjs eZZGvH"
    >
      <div
        class="sc-dnqmqq beBlgW"
      >
        <div
          class="sc-iwsKbI jQvhKG"
        >
          <div
            class="sc-gZMcBi caXjZP"
          >
            Voting
            <span>
              Works
            </span>
          </div>
          <div
            class="sc-gqjmRU hnZXkc"
          >
            Ballot Scanner
          </div>
        </div>
        <div
          class="sc-VigVT dQFuUY"
        >
          <button
            class="sc-ifAKCX gKVbpr"
            type="button"
          >
            Confirm Ballot Removed and Continue Scanning
          </button>
        </div>
      </div>
    </div>
    <main
      class="sc-bdVaJa kYuSve"
    >
      <div
        class="sc-kAzzGY kIgkAR"
      >
        <div
          class="sc-htpNat eawaaV"
        >
          <div
            class="sc-cSHVUG eTlAui"
          >
            Live Ballot
          </div>
          <p>
            This last scanned sheet 
            <strong>
              was not tabulated
            </strong>
            .
          </p>
          <p>
            Remove the LIVE ballot before continuing.
          </p>
        </div>
        <div
          class="sc-chPdSV bwDMEc"
        >
          <div>
            <img
              alt="front"
              src="/front/url"
            />
          </div>
          <div>
            <img
              alt="back"
              src="/back/url"
            />
          </div>
        </div>
      </div>
    </main>
    <div
      class="sc-jzJRlG gDbTFU"
    >
      <div
        class="sc-gzVnrw ffzAOv"
      >
        Scanner ID: 
        <strong>
          0000
        </strong>
      </div>
      <div
        class="sc-gzVnrw ffzAOv"
      >
        <strong>
          General Election
        </strong>
         — 
        Tuesday, November 3, 2020
         —
         
        Franklin County
        , 
        State of Hamilton
         
        — Election Hash: 
        <strong>
          2f6b1553c7
        </strong>
      </div>
    </div>
  </div>
</div>
`;

exports[`calls out test ballot sheets in live mode 1`] = `
<div>
  <div
    class="sc-fjdhpX gOpleb"
  >
    <div
      class="sc-htoDjs eZZGvH"
    >
      <div
        class="sc-dnqmqq beBlgW"
      >
        <div
          class="sc-iwsKbI jQvhKG"
        >
          <div
            class="sc-gZMcBi caXjZP"
          >
            Voting
            <span>
              Works
            </span>
          </div>
          <div
            class="sc-gqjmRU hnZXkc"
          >
            Ballot Scanner
          </div>
        </div>
        <div
          class="sc-VigVT dQFuUY"
        >
          <button
            class="sc-ifAKCX gKVbpr"
            type="button"
          >
            Confirm Ballot Removed and Continue Scanning
          </button>
        </div>
      </div>
    </div>
    <main
      class="sc-bdVaJa kYuSve"
    >
      <div
        class="sc-kAzzGY kIgkAR"
      >
        <div
          class="sc-htpNat eawaaV"
        >
          <div
            class="sc-cSHVUG eTlAui"
          >
            Test Ballot
          </div>
          <p>
            This last scanned sheet 
            <strong>
              was not tabulated
            </strong>
            .
          </p>
          <p>
            Remove the TEST ballot before continuing.
          </p>
        </div>
        <div
          class="sc-chPdSV bwDMEc"
        >
          <div>
            <img
              alt="front"
              src="/front/url"
            />
          </div>
          <div>
            <img
              alt="back"
              src="/back/url"
            />
          </div>
        </div>
      </div>
    </main>
    <div
      class="sc-jzJRlG gDbTFU"
    >
      <div
        class="sc-gzVnrw ffzAOv"
      >
        Scanner ID: 
        <strong>
          0000
        </strong>
      </div>
      <div
        class="sc-gzVnrw ffzAOv"
      >
        <strong>
          General Election
        </strong>
         — 
        Tuesday, November 3, 2020
         —
         
        Franklin County
        , 
        State of Hamilton
         
        — Election Hash: 
        <strong>
          2f6b1553c7
        </strong>
      </div>
    </div>
  </div>
</div>
`;

exports[`says the ballot sheet is blank if it is 1`] = `
<div>
  <div
    class="sc-fjdhpX gOpleb"
  >
    <div
      class="sc-htoDjs eZZGvH"
    >
      <div
        class="sc-dnqmqq beBlgW"
      >
        <div
          class="sc-iwsKbI jQvhKG"
        >
          <div
            class="sc-gZMcBi caXjZP"
          >
            Voting
            <span>
              Works
            </span>
          </div>
          <div
            class="sc-gqjmRU hnZXkc"
          >
            Ballot Scanner
          </div>
        </div>
        <div
          class="sc-VigVT dQFuUY"
        >
          <button
            class="sc-ifAKCX hcRgUA"
            disabled=""
            type="button"
          >
            Continue Scanning
          </button>
        </div>
      </div>
    </div>
    <main
      class="sc-bdVaJa kYuSve"
    >
      <div
        class="sc-kAzzGY kIgkAR"
      >
        <div
          class="sc-htpNat eawaaV"
        >
          <div
            class="sc-cSHVUG eTlAui"
          >
            Unknown Reason
          </div>
          <p>
            This last scanned sheet 
            <strong>
              was not tabulated
            </strong>
            .
          </p>
          <h4>
            Original Ballot Scan
          </h4>
          <p>
            Remove ballot and create a duplicate ballot for the Resolution Board to review.
            <br />
            <button
              class="sc-ifAKCX fGEpuB"
              type="button"
            >
              Original Ballot Removed
            </button>
          </p>
          <h4>
            Duplicate Ballot Scan
          </h4>
          <p>
            Confirm ballot sheet was reviewed by the Resolution Board and tabulate as ballow with issue which could not be determined.
            <br />
            <button
              class="sc-ifAKCX fGEpuB"
              type="button"
            >
              Tabulate Duplicate Ballot
            </button>
          </p>
        </div>
        <div
          class="sc-chPdSV bwDMEc"
        >
          <div>
            <img
              alt="front"
              src="/front/url"
            />
          </div>
          <div>
            <img
              alt="back"
              src="/back/url"
            />
          </div>
        </div>
      </div>
    </main>
    <div
      class="sc-jzJRlG gDbTFU"
    >
      <div
        class="sc-gzVnrw ffzAOv"
      >
        Scanner ID: 
        <strong>
          0000
        </strong>
      </div>
      <div
        class="sc-gzVnrw ffzAOv"
      >
        <strong>
          General Election
        </strong>
         — 
        Tuesday, November 3, 2020
         —
         
        Franklin County
        , 
        State of Hamilton
         
        — Election Hash: 
        <strong>
          2f6b1553c7
        </strong>
      </div>
    </div>
  </div>
</div>
`;

exports[`says the ballot sheet is overvoted if it is 1`] = `
<div>
  <div
    class="sc-fjdhpX gOpleb"
  >
    <div
      class="sc-htoDjs eZZGvH"
    >
      <div
        class="sc-dnqmqq beBlgW"
      >
        <div
          class="sc-iwsKbI jQvhKG"
        >
          <div
            class="sc-gZMcBi caXjZP"
          >
            Voting
            <span>
              Works
            </span>
          </div>
          <div
            class="sc-gqjmRU hnZXkc"
          >
            Ballot Scanner
          </div>
        </div>
        <div
          class="sc-VigVT dQFuUY"
        >
          <button
            class="sc-ifAKCX hcRgUA"
            disabled=""
            type="button"
          >
            Continue Scanning
          </button>
        </div>
      </div>
    </div>
    <main
      class="sc-bdVaJa kYuSve"
    >
      <div
        class="sc-kAzzGY kIgkAR"
      >
        <div
          class="sc-htpNat eawaaV"
        >
          <div
            class="sc-cSHVUG eTlAui"
          >
            Overvote
          </div>
          <p>
            This last scanned sheet 
            <strong>
              was not tabulated
            </strong>
            .
          </p>
          <h4>
            Original Ballot Scan
          </h4>
          <p>
            Remove ballot and create a duplicate ballot for the Resolution Board to review.
            <br />
            <button
              class="sc-ifAKCX fGEpuB"
              type="button"
            >
              Original Ballot Removed
            </button>
          </p>
          <h4>
            Duplicate Ballot Scan
          </h4>
          <p>
            Confirm ballot sheet was reviewed by the Resolution Board and tabulate as ballot sheet with an
             
            <strong>
              overvote
            </strong>
            .
            <br />
            <button
              class="sc-ifAKCX fGEpuB"
              type="button"
            >
              Tabulate Duplicate Ballot
            </button>
          </p>
        </div>
        <div
          class="sc-chPdSV bwDMEc"
        >
          <div>
            <img
              alt="front"
              src="/front/url"
            />
          </div>
          <div>
            <img
              alt="back"
              src="/back/url"
            />
          </div>
        </div>
      </div>
    </main>
    <div
      class="sc-jzJRlG gDbTFU"
    >
      <div
        class="sc-gzVnrw ffzAOv"
      >
        Scanner ID: 
        <strong>
          0000
        </strong>
      </div>
      <div
        class="sc-gzVnrw ffzAOv"
      >
        <strong>
          General Election
        </strong>
         — 
        Tuesday, November 3, 2020
         —
         
        Franklin County
        , 
        State of Hamilton
         
        — Election Hash: 
        <strong>
          2f6b1553c7
        </strong>
      </div>
    </div>
  </div>
</div>
`;

exports[`says the sheet is unreadable if it is 1`] = `
<div>
  <div
    class="sc-fjdhpX gOpleb"
  >
    <div
      class="sc-htoDjs eZZGvH"
    >
      <div
        class="sc-dnqmqq beBlgW"
      >
        <div
          class="sc-iwsKbI jQvhKG"
        >
          <div
            class="sc-gZMcBi caXjZP"
          >
            Voting
            <span>
              Works
            </span>
          </div>
          <div
            class="sc-gqjmRU hnZXkc"
          >
            Ballot Scanner
          </div>
        </div>
        <div
          class="sc-VigVT dQFuUY"
        >
          <button
            class="sc-ifAKCX hcRgUA"
            disabled=""
            type="button"
          >
            Continue Scanning
          </button>
        </div>
      </div>
    </div>
    <main
      class="sc-bdVaJa kYuSve"
    >
      <div
        class="sc-kAzzGY kIgkAR"
      >
        <div
          class="sc-htpNat eawaaV"
        >
          <div
            class="sc-cSHVUG eTlAui"
          >
            Unreadable
          </div>
          <p>
            This last scanned sheet 
            <strong>
              was not tabulated
            </strong>
            .
          </p>
          <h4>
            Original Ballot Scan
          </h4>
          <p>
            Remove ballot and create a duplicate ballot for the Resolution Board to review.
            <br />
            <button
              class="sc-ifAKCX fGEpuB"
              type="button"
            >
              Original Ballot Removed
            </button>
          </p>
          <h4>
            Duplicate Ballot Scan
          </h4>
          <p>
            Confirm sheet was reviewed by the Resolution Board and tabulate as 
            <strong>
              unreadable
            </strong>
            .
            <br />
            <button
              class="sc-ifAKCX fGEpuB"
              type="button"
            >
              Tabulate Duplicate Ballot
            </button>
          </p>
        </div>
        <div
          class="sc-chPdSV bwDMEc"
        >
          <div>
            <img
              alt="front"
              src="/front/url"
            />
          </div>
          <div>
            <img
              alt="back"
              src="/back/url"
            />
          </div>
        </div>
      </div>
    </main>
    <div
      class="sc-jzJRlG gDbTFU"
    >
      <div
        class="sc-gzVnrw ffzAOv"
      >
        Scanner ID: 
        <strong>
          0000
        </strong>
      </div>
      <div
        class="sc-gzVnrw ffzAOv"
      >
        <strong>
          General Election
        </strong>
         — 
        Tuesday, November 3, 2020
         —
         
        Franklin County
        , 
        State of Hamilton
         
        — Election Hash: 
        <strong>
          2f6b1553c7
        </strong>
      </div>
    </div>
  </div>
</div>
`;
